small bug fixing